fix nav container on mobile

--- a/components/nav/nav.scss
+++ b/components/nav/nav.scss
@@ -1,3 +1,8 @@
+
+
+@import "../../styles/variables";
+
+
 .nav
 {
     padding: 20px 0;
@@ -10,11 +15,18 @@
     display: flex;
 
     padding: 0 30px;
-
+    
+    @media (max-width: $screen-xs-min + $container-padding * 2)
+    {
+        padding: 0 10px;
+    }
+    
+    
     flex: 1 1 auto;
     justify-content: space-between;
     align-items: center;
 }
+
 
 .icon
 {
